--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.30'
+    ext.kotlin_version = '1.6.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,7 +18,7 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
@@ -26,12 +27,12 @@ task clean(type: Delete) {
 }
 
 ext {
-    activityVersion = '1.3.1'
-    appCompatVersion = '1.3.1'
-    constraintLayoutVersion = '2.1.0'
+    activityVersion = '1.4.0'
+    appCompatVersion = '1.4.0'
+    constraintLayoutVersion = '2.1.2'
     coreTestingVersion = '2.1.0'
     coroutines = '1.5.0'
-    lifecycleVersion = '2.3.1'
+    lifecycleVersion = '2.4.0'
     materialVersion = '1.4.0'
     roomVersion = '2.3.0'
     // testing
